Don't list failed projects/companies
* Also add `gitlab` account

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Francisco Noel">
     <meta name="description"
-        content="Francisco Noel - Software Engineer specializing in backend systems, systems programming, distributed systems, and platform engineering. Previous work experience at Chevron, American Express, etc.">
+        content="Francisco Noel - Software Engineer specializing in backend systems, systems programming, distributed systems, and platform engineering. Previously interned at American Express, and twice at Chevron.">
     <meta name="keywords"
         content="Francisco Noel, software engineer, backend systems, systems programming, distributed systems, platform engineering, infrastructure, networking, C++, Rust, Python, Chevron, American Express">
     <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://francisconoel.com/">
     <meta property="og:title" content="Francisco Noel - Software Engineer">
     <meta property="og:description"
-        content="Francisco Noel - Software Engineer specializing in backend systems, systems programming, infrastructure, networking, distributed systems, and platform engineering. Previous work experience at Chevron, American Express, etc.">
+        content="Francisco Noel - Software Engineer specializing in backend systems, systems programming, infrastructure, networking, distributed systems, and platform engineering. Previously interned at American Express, and twice at Chevron.">
     <meta property="og:image" content="https://francisconoel.com/images/profile.jpg">
 
     <!-- Twitter -->
@@ -24,7 +24,7 @@
     <meta property="twitter:url" content="https://francisconoel.com/">
     <meta property="twitter:title" content="Francisco Noel - Software Engineer">
     <meta property="twitter:description"
-        content="Francisco Noel - Software Engineer specializing in backend systems, systems programming, distributed systems, and platform engineering. Previous work experience at Chevron, American Express, etc.">
+        content="Francisco Noel - Software Engineer specializing in backend systems, systems programming, distributed systems, and platform engineering. Previously interned at American Express, and twice at Chevron.">
     <meta property="twitter:image" content="https://francisconoel.com/images/profile.jpg">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="icon" type="image/png" href="images/profile.jpg">
@@ -41,6 +41,7 @@
       "url": "https://francisconoel.com",
       "sameAs": [
         "https://github.com/byfnoel",
+        "https://gitlab.com/byfnoel",
         "https://linkedin.com/in/francisconoel",
         "https://x.com/byfnoel",
         "https://youtube.com/@francisconoel"
@@ -100,8 +101,8 @@
             <img src="images/IMG_0154.png" alt="Francisco Noel" class="profile-picture">
             <div class="about-content">
                 <p> Hi there 👋! Hope you found the right <a href="https://www.github.com/byfnoel"> Francisco</a>. </p>
-                <p> I am an undergraduate student at <a href="https://www.umb.edu">University of Massachusetts
-                        Boston</a> where I am pursuing a bachelor's degree in Computer Science.
+                <p> I am a student at the <a href="https://www.umb.edu">University of Massachusetts
+                        Boston</a> where I study Computer Science.
                 </p>
 
                 <p>
@@ -110,15 +111,14 @@
                 </p>
 
                 <p>
-                    I've worked at various companies, both large and small, such as <a
-                        href='https://www.americanexpress.com'> American
-                        Express</a>, <a href="https://www.chevron.com"> Chevron</a>, <a
-                        href="https://www.github.com/3linic">3Linic</a>, and <a
-                        href="https://www.knobull.com">Knobull</a>.
+                    Previously, I interned at <a href='https://www.americanexpress.com'> American
+                        Express</a> where I worked on Python backend services, and twice at <a
+                        href="https://www.chevron.com">
+                        Chevron</a> to work on cloud infrastructure and DevOps pipelines.
                 </p>
                 <p>
-                    Outside of school and work, I enjoy contributing to Rust open-source projects, reading, drinking
-                    coffee, and lifting weights.
+                    Outside of school and work, I enjoy contributing to Rust open-source projects, reading, going out,
+                    and lifting weights.
                 </p>
 
             </div>
@@ -130,6 +130,7 @@
             <p>Email: byfnoel [at] gmail [dot] com</p>
             <p>
                 <a href="https://www.github.com/byfnoel/" title="GitHub"><i class="fab fa-github"></i> @byfnoel</a> /
+                <a href="https://www.gitlab.com/byfnoel/" title="GitLab"><i class="fab fa-gitlab"></i> @byfnoel</a> /
                 <a href="https://www.linkedin.com/in/francisconoel/" title="LinkedIn"><i class="fab fa-linkedin"></i>
                     @francisconoel</a> /
                 <a href="https://www.x.com/byfnoel/" title="X (Twitter)"><i class="fab fa-twitter"></i> @byfnoel</a> /
