--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <p>
                     Previously, I interned at <a href='https://www.americanexpress.com'> American
-                        Express</a> where I worked on Python backend services, and twice at <a
+                        Express</a> where I worked on Python backend services, then twice at <a
                         href="https://www.chevron.com">
                         Chevron</a> to work on cloud infrastructure and DevOps pipelines.
                 </p>
